# loris

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: c-cpp.yml
scripting/: __init__.py  loris.i  lorisMorph.i  lua.i
